# cpp_project_template

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
application/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt
tests/: CMakeLists.txt
